Minor (if any) changes to War game.